# FastAPI_Kafka_example

./: .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
src/: main.py
src/kafka_integration/: __init__.py  consumer.py  producer.py
src/serializers/: kafka_messages.py
src/settings/: .env.example  __init__.py  base_config.py  config_handler.py
src/settings/develop/: config.py
src/settings/production/: config.py
